Fixed some of the layout and removed redundant pages

--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,5 +1,55 @@
 <div class="main_container">
-    <div class="temporary">
-        <h1>This will be the home content.</h1>
+    
+
+    <div class="about-container">
+        <img src="assets/images/me.jpg"/>
+        <h1>Hi, I'm Devin...</h1>
+        <p>
+            Welcome to my small portfolio, and nice to meet you!
+        </p>
+        <p>
+            I've been passionate about software development since I was 12 years old. Starting with HTML, I learned that there was an endless world of creativity in front of me. I eventually learned Java by modding MineCraft, then continued on with web technologies and existing game engines, like Unity.
+        </p>
+            I'm proficient in languages like JavaScript/TypeScript, C#, and Go. I often use them to combine web servers with game experiences for myself and my friends! When I'm not having fun tinkering, I'm hanging out with my cat Floof, cycling around my local area, or creating the ultimate playlist.
+        <p>
+            My main goal for 2021 is to adapt to and solve real-world problems within the software development industry, and then to apply those solutions in an effort to make others experiences easier or more intuitive.
+        </p>
+    </div>
+
+    <h1>My Projects</h1>
+
+    <div class="projects-container">
+        <div class="project-item">
+            <article>
+                <h1>Twitter Bot</h1>
+                <img src="assets/images/twitterbot.gif">
+                <a href="https://github.com/webdevliteral/TwitterBot/blob/main/index.js" target="_blank">Github Link</a>
+            </article>
+        </div>
+
+        <div class="project-item">
+            <article>
+                <h1>Unity 3D RPG Prototype</h1>
+                <img src="assets/images/unityRPG.gif">
+                <a href="https://github.com/webdevliteral/Unity3DCodeChallenge/tree/main/Assets/Scripts" target="_blank">Github Link</a>
+            </article>
+        </div>
+
+        <div class="project-item">
+            <article>
+                <h1>Steam API Fun</h1>
+                <img src="assets/images/steamsearch.gif">
+                <a href="https://github.com/webdevliteral/SteamAPIChallenge" target="_blank">Github Link</a>
+                <a class="alt-button" routerLink="/steamsearch" routerLinkActive="active">Try Me!</a>
+            </article>
+        </div>
+
+        <div class="project-item">
+            <article>
+                <h1>Fractal Image Gen</h1>
+                <img src="assets/images/fractal.png">
+                <a href="https://github.com/webdevliteral/FractalGeneration" target="_blank">Github Link</a>
+            </article>
+        </div>
     </div>
 </div>
